# master-thesis

./: .gitignore  README.md  commands.txt
network/: README.md  fine_tune.py  prediction.py  train_top.py
network/data/: README.md
network/data/val/: README.md
network/utils/: flip_image.py  sort_images.py
robotic_car/client/dlls/: README.md
robotic_car/client/src/: Robotic_car.sln
robotic_car/client/src/Robotic_car/: Robotic_car.vcxproj  gui.h  gui.xcf  main.cpp  networkcomm.cpp  networkcomm.h
robotic_car/client/src/Robotic_car/images/: README.md
robotic_car/electronics/src/: styrelektronik.ino
robotic_car/raspberry_pi/: CMakeLists.txt  Makefile  imgmodes.h  main.c
robotic_car_original/: README
robotic_car_original/client/: README.md
robotic_car_original/client/Källkod/: Robotbil.sln
robotic_car_original/client/Källkod/Robotbil/: Robotbil.rc  Robotbil.vcxproj  Robotbil.vcxproj.filters  imgmodes.h  main.cpp  networkcomm.cpp  networkcomm.h  resource.h
robotic_car_original/client/dlls/: README
robotic_car_original/electronics/: README.md
robotic_car_original/raspberry_pi/: README.md  main.c
robotic_car_original/raspberry_pi/libs/: instruction_types.h  robotnetwork.c  robotnetwork.h  robotserial.c  robotserial.h
